Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- Set a more efficient configuration for tidy:
  -indent, -wrap 80, --hide-comments no
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 